<resources>
    <string name="app_name">KeyKeep</string>
    <string name="password_list">Список паролей</string>
    <string name="settings">Настройки</string>
    <string name="add">Добавить</string>
    <string name="search">Поиск</string>
    <string name="open_drawer_layout">Открыть выдвижное меню</string>
    <string name="set_password">Установить пароль</string>
    <string name="set_finger_password">Установить отпечаток</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close_screen">Закрыть страницу</string>
    <string name="name">Название</string>
    <string name="site_example">Сайт: https://example.com/</string>
    <string name="mail_optionally">Почта (Необязательно)</string>
    <string name="password">Пароль</string>
    <string name="edit">Изменить</string>
    <string name="confirm">Подтверждение</string>
    <string name="enter_code_or_use_finger_password">Введите код или используется отпечаток пальца</string>
    <string name="enter_password_and_click_button">Введите пароль и нажмите на кнопку для подтверждения</string>
    <string name="set">Установить</string>
    <string name="set_finger_scan">Установить отпечаток</string>
    <string name="touch_finger_to_scanner">Приложите палец к сканеру отпечатка пальца</string>
    <string name="list_empty">Список пуст</string>
    <string name="device_have_finger_scan">+ Отпечаток присутствует на устройстве</string>
    <string name="device_not_have_finger_scan">- Отпечаток отсутствует на устройстве</string>
    <string name="error_check">Ошибка проверки: %1$s</string>
    <string name="The_device_does_not_support_a_fingerprint_scanner">Устройство не поддерживает сканер отпечатков пальцев</string>
    <string name="No_registered_fingerprints_on_the_device">Нет зарегистрированных отпечатков пальцев на устройстве</string>
    <string name="check_fingerprint">Проверить отпечаток</string>
    <string name="image_to_scan_fingerprint">картинка со сканером отпечатка</string>
    <string name="Password_not_defined">Master password not defined</string>
    <string name="delete_password">Удалить пароль</string>
    <string name="you_really_delete_this_password">Вы уверены, что хотите удалить пароль от </string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
</resources>