<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.screens.detail.DetailFragment">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="24dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/close_screen"
        android:padding="4dp"
        android:src="@drawable/ic_arrow_left"
        app:tint="@color/on_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/style_text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:gravity="center"
        android:text="Просмотр"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_back" />

    <EditText
        android:id="@+id/et_name"
        style="@style/style_edit_text"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="24dp"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <EditText
        android:id="@+id/et_site"
        style="@style/style_edit_text"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:inputType="textWebEmailAddress"
        android:hint="@string/site_example"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/et_name"
        app:layout_constraintStart_toStartOf="@+id/et_name"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />


    <EditText
        android:id="@+id/et_email"
        style="@style/style_edit_text"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/mail_optionally"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/et_site"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/et_site"
        app:layout_constraintTop_toBottomOf="@+id/et_site" />

    <EditText
        android:id="@+id/et_password"
        style="@style/style_edit_text"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:letterSpacing="0"
        app:layout_constraintEnd_toEndOf="@+id/et_site"
        app:layout_constraintStart_toStartOf="@+id/et_site"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <ImageButton
        android:id="@+id/btn_show_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_eye_close"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintTop_toTopOf="@+id/et_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="24dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_or_edit"
            style="@style/style_text_primary"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:textColor="@color/text_white"
            android:text="@string/edit"
            android:backgroundTint="@color/element_primary"
            android:background="@drawable/background_primary_button"/>


        <ImageButton
            android:id="@+id/btn_delete"
            style="@style/style_text_primary"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginLeft="10dp"
            android:text="@string/edit"
            android:src="@drawable/ic_delete"
            android:background="@drawable/background_primary_button"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>