<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screens.search.SearchFragment"
    android:background="@color/background">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/close_screen"
        android:padding="4dp"
        app:tint="@color/on_background"
        android:src="@drawable/ic_arrow_left"
        android:layout_margin="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_search"
        style="@style/style_edit_text"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginHorizontal="24dp"
        android:hint="@string/name"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="@+id/btn_back" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_passwords"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_search"
        tools:listitem="@layout/item_password" />

    <TextView
        android:id="@+id/tv_empty_list"
        style="@style/style_text_secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_empty"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rv_passwords"
        app:layout_constraintEnd_toEndOf="@+id/rv_passwords"
        app:layout_constraintStart_toStartOf="@+id/rv_passwords"
        app:layout_constraintTop_toTopOf="@+id/rv_passwords" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:indeterminateTint="@color/element_primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rv_passwords"
        app:layout_constraintEnd_toEndOf="@+id/rv_passwords"
        app:layout_constraintStart_toStartOf="@+id/rv_passwords"
        app:layout_constraintTop_toTopOf="@+id/rv_passwords" />


</androidx.constraintlayout.widget.ConstraintLayout>